objects/ssot__CapturePayment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuthorizationProcessingMode__c</fullName>
        <label>Authorization Processing Mode</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BalanceAmount__c</fullName>
        <label>Balance Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CancellationDate__c</fullName>
        <label>Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CancellationEffectiveDate__c</fullName>
        <label>Cancellation Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CancellationGatewayDate__c</fullName>
        <label>Cancellation Gateway Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CancellationGatewayRefNumber__c</fullName>
        <label>Cancellation Gateway Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CancellationGatewayResultCode__c</fullName>
        <label>Cancellation Gateway Result Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CancellationInternalResultCode__c</fullName>
        <label>Cancellation Internal Result Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CapturePaymentId__c</fullName>
        <label>Capture Payment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CapturePaymentType__c</fullName>
        <label>Payment Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClientContextText__c</fullName>
        <label>Client Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CommentText__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CustomerEmailAddress__c</fullName>
        <label>Customer Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustomerPhoneNumber__c</fullName>
        <label>Customer Phone Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GatewayReferenceDetailsText__c</fullName>
        <label>Gateway Reference Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IPAddress__c</fullName>
        <label>Internet Protcol Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>[DoNotUse]Capture Payment Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ImpactAmount__c</fullName>
        <label>Impact Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastReferencedDateTime__c</fullName>
        <label>Last Referenced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastViewedDateTime__c</fullName>
        <label>Last Viewed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LatestGatewayDate__c</fullName>
        <label>Latest Gateway Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LatestGatewayInternalReferenceNumber__c</fullName>
        <label>Latest Gateway Internal Reference Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LatestGatewayInternalResult__c</fullName>
        <label>Latest Gateway Internal Result</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LatestGatewayReferenceNumber__c</fullName>
        <label>Latest Gateway Reference Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LatestGatewayResultCodeDescText__c</fullName>
        <label>Latest Gateway Result Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LatestGatewayResultCode__c</fullName>
        <label>Latest Gateway Result Code</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LatestPaymentGatewayMessageText__c</fullName>
        <label>Latest Payment Gateway Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LegalEntityAccountingPeriodId__c</fullName>
        <label>Legal Entity Accounting Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LegalEntityId__c</fullName>
        <label>Legal Entity</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MacAddress__c</fullName>
        <label>Mac Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NetAppliedAmount__c</fullName>
        <label>Net Applied Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__NetRefundAppliedAmount__c</fullName>
        <label>Net Refund Applied</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentAmount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentEffectiveDate__c</fullName>
        <label>Payment Effective Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentMethodObjectId__c</fullName>
        <label>Payment Method Object Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentMethodObject__c</fullName>
        <label>Payment Method Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentNumber__c</fullName>
        <label>Payment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentStatus__c</fullName>
        <label>Payment Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAppliedAmount__c</fullName>
        <label>Total Applied Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalRefundAppliedAmount__c</fullName>
        <label>Total Refund Applied</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalRefundUnappliedAmount__c</fullName>
        <label>Total Refund Unapplied</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalUnappliedAmount__c</fullName>
        <label>Total Unapplied Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
</CustomObject>